Cleanup, bug fixes

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -200,11 +200,11 @@
     <Compile Include="View\PopupCourseComparison.Designer.cs">
       <DependentUpon>PopupCourseComparison.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\PopupLecturerComparisonView.cs">
+    <Compile Include="View\Comparison\LecturerSelectPopup.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\PopupLecturerComparisonView.Designer.cs">
-      <DependentUpon>PopupLecturerComparisonView.cs</DependentUpon>
+    <Compile Include="View\Comparison\LecturerSelectPopup.Designer.cs">
+      <DependentUpon>LecturerSelectPopup.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Review\LecturerReviewView.cs">
       <SubType>Form</SubType>
@@ -332,8 +332,8 @@
     <EmbeddedResource Include="View\PopupCourseComparison.resx">
       <DependentUpon>PopupCourseComparison.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\PopupLecturerComparisonView.resx">
-      <DependentUpon>PopupLecturerComparisonView.cs</DependentUpon>
+    <EmbeddedResource Include="View\Comparison\LecturerSelectPopup.resx">
+      <DependentUpon>LecturerSelectPopup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Review\LecturerReviewView.resx">
       <DependentUpon>LecturerReviewView.cs</DependentUpon>
