Added lecturer comparison view. (#51)
* Added Lecturer Comparison View

* Fixed name of branch

* Added lecturer comparison view.

* Cleanup, bug fixes

* Remove test form

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -170,6 +170,12 @@
     <Compile Include="View\Comparison\FacultyComparisonView.Designer.cs">
       <DependentUpon>FacultyComparisonView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Comparison\LecturerComparisonView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Comparison\LecturerComparisonView.Designer.cs">
+      <DependentUpon>LecturerComparisonView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Comparison\UniversityComparisonView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -193,6 +199,12 @@
     </Compile>
     <Compile Include="View\PopupCourseComparison.Designer.cs">
       <DependentUpon>PopupCourseComparison.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Comparison\LecturerSelectPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Comparison\LecturerSelectPopup.Designer.cs">
+      <DependentUpon>LecturerSelectPopup.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Review\LecturerReviewView.cs">
       <SubType>Form</SubType>
@@ -305,6 +317,9 @@
     <EmbeddedResource Include="View\Comparison\FacultyComparisonView.resx">
       <DependentUpon>FacultyComparisonView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Comparison\LecturerComparisonView.resx">
+      <DependentUpon>LecturerComparisonView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\UniversityComparisonView.resx">
       <DependentUpon>UniversityComparisonView.cs</DependentUpon>
     </EmbeddedResource>
@@ -316,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\PopupCourseComparison.resx">
       <DependentUpon>PopupCourseComparison.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Comparison\LecturerSelectPopup.resx">
+      <DependentUpon>LecturerSelectPopup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Review\LecturerReviewView.resx">
       <DependentUpon>LecturerReviewView.cs</DependentUpon>
