--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Model\Faculty.cs" />
     <Compile Include="Model\Lecturer.cs" />
     <Compile Include="Model\Review.cs" />
+    <Compile Include="Model\StatsData.cs" />
     <Compile Include="Model\StudyProgram.cs" />
     <Compile Include="Model\Course.cs" />
     <Compile Include="Model\University.cs" />
@@ -148,6 +149,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Auth\IPasswordEncoder.cs" />
     <Compile Include="Service\Auth\PasswordEncoder.cs" />
+    <Compile Include="Service\Statistics\IStatisticCalculator.cs" />
+    <Compile Include="Service\Statistics\StatisticCalculator.cs" />
     <Compile Include="Service\Validator\ILoginDataValidator.cs" />
     <Compile Include="Service\Validator\ISignupDataValidator.cs" />
     <Compile Include="Service\Validator\SignupDataValidator.cs" />
@@ -163,6 +166,12 @@
     </Compile>
     <Compile Include="View\Comparison\CourseComparisonView.Designer.cs">
       <DependentUpon>CourseComparisonView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Comparison\CourseSelectFormView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Comparison\CourseSelectFormView.Designer.cs">
+      <DependentUpon>CourseSelectFormView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Comparison\FacultyComparisonView.cs">
       <SubType>Form</SubType>
@@ -313,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\CourseComparisonView.resx">
       <DependentUpon>CourseComparisonView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Comparison\CourseSelectFormView.resx">
+      <DependentUpon>CourseSelectFormView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\FacultyComparisonView.resx">
       <DependentUpon>FacultyComparisonView.cs</DependentUpon>
