--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -74,7 +74,9 @@
     <Compile Include="Controller\Review\ICourseReviewController.cs" />
     <Compile Include="Controller\Review\IStudyProgramReviewController.cs" />
     <Compile Include="Controller\Review\StudyProgramReviewController.cs" />
+    <Compile Include="Controller\StudyProgram\IStudyProgramComparisonController.cs" />
     <Compile Include="Controller\StudyProgram\IStudyProgramController.cs" />
+    <Compile Include="Controller\StudyProgram\StudyProgramComparisonController.cs" />
     <Compile Include="Controller\StudyProgram\StudyProgramController.cs" />
     <Compile Include="Controller\Course\CourseController.cs" />
     <Compile Include="Controller\Review\IReviewController.cs" />
@@ -190,6 +192,12 @@
     </Compile>
     <Compile Include="View\Comparison\LecturerComparisonView.Designer.cs">
       <DependentUpon>LecturerComparisonView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Comparison\StudyProgramSelectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Comparison\StudyProgramSelectForm.Designer.cs">
+      <DependentUpon>StudyProgramSelectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Comparison\UniversityComparisonView.cs">
       <SubType>Form</SubType>
@@ -334,6 +342,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\LecturerComparisonView.resx">
       <DependentUpon>LecturerComparisonView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Comparison\StudyProgramSelectForm.resx">
+      <DependentUpon>StudyProgramSelectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\UniversityComparisonView.resx">
       <DependentUpon>UniversityComparisonView.cs</DependentUpon>
