--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -193,11 +193,11 @@
     <Compile Include="View\Comparison\LecturerComparisonView.Designer.cs">
       <DependentUpon>LecturerComparisonView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Comparison\StudyProgramSelectForm.cs">
+    <Compile Include="View\Comparison\StudyProgramSelectView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Comparison\StudyProgramSelectForm.Designer.cs">
-      <DependentUpon>StudyProgramSelectForm.cs</DependentUpon>
+    <Compile Include="View\Comparison\StudyProgramSelectView.Designer.cs">
+      <DependentUpon>StudyProgramSelectView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Comparison\UniversityComparisonView.cs">
       <SubType>Form</SubType>
@@ -343,8 +343,8 @@
     <EmbeddedResource Include="View\Comparison\LecturerComparisonView.resx">
       <DependentUpon>LecturerComparisonView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Comparison\StudyProgramSelectForm.resx">
-      <DependentUpon>StudyProgramSelectForm.cs</DependentUpon>
+    <EmbeddedResource Include="View\Comparison\StudyProgramSelectView.resx">
+      <DependentUpon>StudyProgramSelectView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\UniversityComparisonView.resx">
       <DependentUpon>UniversityComparisonView.cs</DependentUpon>
