--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -62,7 +62,9 @@
   <ItemGroup>
     <Compile Include="Controller\Auth\AuthController.cs" />
     <Compile Include="Controller\Comparison\CourseComparisonController.cs" />
+    <Compile Include="Controller\Comparison\FacultyComparisonController.cs" />
     <Compile Include="Controller\Comparison\ICourseComparisonController.cs" />
+    <Compile Include="Controller\Comparison\IFacultyComparisonController.cs" />
     <Compile Include="Controller\Faculty\FacultyController.cs" />
     <Compile Include="Controller\Faculty\IFacultyController.cs" />
     <Compile Include="Controller\Home\HomeController.cs" />
