--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Controller\Auth\AuthController.cs" />
     <Compile Include="Controller\Comparison\CourseComparisonController.cs" />
     <Compile Include="Controller\Comparison\ICourseComparisonController.cs" />
+    <Compile Include="Controller\Comparison\ILecturerComparisonController.cs" />
+    <Compile Include="Controller\Comparison\LecturerComparisonController.cs" />
     <Compile Include="Controller\Faculty\FacultyController.cs" />
     <Compile Include="Controller\Faculty\IFacultyController.cs" />
     <Compile Include="Controller\Home\HomeController.cs" />
