Branch#70 (Create StudyProgramComparison logic) (#57)
* Created StudyProgramComparison class and interface, created StudyProgramSelectForm, added compare button to StudyProgramView

* Implemented StudyProgram selection to StudyProgramComparisonController via StudyProgramSelectView

* Created methods for displaying data in StudyProgramComparisonView

* Added LecturerCount and CourseCount fields to StatsData

* Added RelevantPercentage to StatsData(might conflict), finalized data crunching in ComparisonController, added methods to display statData in ComparisonView

* Deleted StudyProgramSelectView and changed it with SelectPopup, changed logic accordingly, added link from StudyProgramComparisonView back to StudyProgramView

* Deleted else from UpdateData in StudyProgramComparisonController

* Fixed LoadStudyPrograms wrong call to DB

* Remove placeholder text

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -76,7 +76,9 @@
     <Compile Include="Controller\Review\ICourseReviewController.cs" />
     <Compile Include="Controller\Review\IStudyProgramReviewController.cs" />
     <Compile Include="Controller\Review\StudyProgramReviewController.cs" />
+    <Compile Include="Controller\StudyProgram\IStudyProgramComparisonController.cs" />
     <Compile Include="Controller\StudyProgram\IStudyProgramController.cs" />
+    <Compile Include="Controller\StudyProgram\StudyProgramComparisonController.cs" />
     <Compile Include="Controller\StudyProgram\StudyProgramController.cs" />
     <Compile Include="Controller\Course\CourseController.cs" />
     <Compile Include="Controller\Review\IReviewController.cs" />
