Branch#71 (Lecturer comparison logika) (#60)
* Added Lecturer comparison view logic, 'Compare lecturers' button in lecturer view that opens lecturer comparison view.

* Remove placeholder text in view, fix null reviews/courses on new lecturer, fix missing close event handler

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Controller\Comparison\CourseComparisonController.cs" />
     <Compile Include="Controller\Comparison\FacultyComparisonController.cs" />
     <Compile Include="Controller\Comparison\ICourseComparisonController.cs" />
+    <Compile Include="Controller\Comparison\ILecturerComparisonController.cs" />
+    <Compile Include="Controller\Comparison\LecturerComparisonController.cs" />
     <Compile Include="Controller\Comparison\IFacultyComparisonController.cs" />
     <Compile Include="Controller\Faculty\FacultyController.cs" />
     <Compile Include="Controller\Faculty\IFacultyController.cs" />
