--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Auth\IPasswordEncoder.cs" />
     <Compile Include="Service\Auth\PasswordEncoder.cs" />
+    <Compile Include="Service\Auth\SessionStorage.cs" />
     <Compile Include="Service\Statistics\IStatisticCalculator.cs" />
     <Compile Include="Service\Statistics\StatisticCalculator.cs" />
     <Compile Include="Service\Validator\ILoginDataValidator.cs" />
