--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -184,7 +184,8 @@
     <Compile Include="Service\Validator\ReviewValidator.cs" />
     <Compile Include="Service\Validator\SignupDataValidator.cs" />
     <Compile Include="Service\Validator\LoginDataValidator.cs" />
-    <Compile Include="Tests\Test.cs" />
+    <Compile Include="Tests\PasswordEncoderTest.cs" />
+    <Compile Include="Tests\SessionStorageTest.cs" />
     <Compile Include="View\AddFormView.cs">
       <SubType>Form</SubType>
     </Compile>
