--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Service\Validator\ReviewValidator.cs" />
     <Compile Include="Service\Validator\SignupDataValidator.cs" />
     <Compile Include="Service\Validator\LoginDataValidator.cs" />
+    <Compile Include="Tests\LoginDataValidatorTest.cs" />
     <Compile Include="Tests\PasswordEncoderTest.cs" />
     <Compile Include="Tests\SessionStorageTest.cs" />
     <Compile Include="Tests\StatisticCalculatorTest.cs" />
