--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -238,57 +238,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201909221555231_MainEntities.cs" />
-    <Compile Include="Migrations\201909221555231_MainEntities.designer.cs">
-      <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909240753298_RemoveLastname.cs" />
-    <Compile Include="Migrations\201909240753298_RemoveLastname.designer.cs">
-      <DependentUpon>201909240753298_RemoveLastname.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909261214327_CreatedStudySubject.cs" />
-    <Compile Include="Migrations\201909261214327_CreatedStudySubject.designer.cs">
-      <DependentUpon>201909261214327_CreatedStudySubject.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909271722515_AddStudySubjectRelation.cs" />
-    <Compile Include="Migrations\201909271722515_AddStudySubjectRelation.designer.cs">
-      <DependentUpon>201909271722515_AddStudySubjectRelation.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909281320065_CreateLecturer.cs" />
-    <Compile Include="Migrations\201909281320065_CreateLecturer.designer.cs">
-      <DependentUpon>201909281320065_CreateLecturer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909291323205_AddSubjectId.cs" />
-    <Compile Include="Migrations\201909291323205_AddSubjectId.designer.cs">
-      <DependentUpon>201909291323205_AddSubjectId.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909300754400_RemoveIdField.cs" />
-    <Compile Include="Migrations\201909300754400_RemoveIdField.designer.cs">
-      <DependentUpon>201909300754400_RemoveIdField.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909301612511_AddDescription.cs" />
-    <Compile Include="Migrations\201909301612511_AddDescription.designer.cs">
-      <DependentUpon>201909301612511_AddDescription.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910011931117_AddFacultyDesc.cs" />
-    <Compile Include="Migrations\201910011931117_AddFacultyDesc.designer.cs">
-      <DependentUpon>201910011931117_AddFacultyDesc.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910030723042_RenameToCourse.cs" />
-    <Compile Include="Migrations\201910030723042_RenameToCourse.designer.cs">
-      <DependentUpon>201910030723042_RenameToCourse.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910031904073_AddMoreFieldsReview.cs" />
-    <Compile Include="Migrations\201910031904073_AddMoreFieldsReview.designer.cs">
-      <DependentUpon>201910031904073_AddMoreFieldsReview.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910040905468_LecturerReviewFields.cs" />
-    <Compile Include="Migrations\201910040905468_LecturerReviewFields.designer.cs">
-      <DependentUpon>201910040905468_LecturerReviewFields.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910041613380_UniWebsites.cs" />
-    <Compile Include="Migrations\201910041613380_UniWebsites.designer.cs">
-      <DependentUpon>201910041613380_UniWebsites.cs</DependentUpon>
+    <Compile Include="Migrations\201910291729194_Auth.cs" />
+    <Compile Include="Migrations\201910291729194_Auth.Designer.cs">
+      <DependentUpon>201910291729194_Auth.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -296,7 +248,6 @@
     <Compile Include="Models\DatabaseContext.cs" />
     <Compile Include="Models\DB.cs" />
     <Compile Include="Models\Faculty.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Lecturer.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Review.cs" />
@@ -419,7 +370,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Assets\images\" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
@@ -438,44 +388,8 @@
     <Analyzer Include="packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201909221555231_MainEntities.resx">
-      <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909240753298_RemoveLastname.resx">
-      <DependentUpon>201909240753298_RemoveLastname.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909261214327_CreatedStudySubject.resx">
-      <DependentUpon>201909261214327_CreatedStudySubject.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909271722515_AddStudySubjectRelation.resx">
-      <DependentUpon>201909271722515_AddStudySubjectRelation.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909281320065_CreateLecturer.resx">
-      <DependentUpon>201909281320065_CreateLecturer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909291323205_AddSubjectId.resx">
-      <DependentUpon>201909291323205_AddSubjectId.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909300754400_RemoveIdField.resx">
-      <DependentUpon>201909300754400_RemoveIdField.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909301612511_AddDescription.resx">
-      <DependentUpon>201909301612511_AddDescription.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910011931117_AddFacultyDesc.resx">
-      <DependentUpon>201910011931117_AddFacultyDesc.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910030723042_RenameToCourse.resx">
-      <DependentUpon>201910030723042_RenameToCourse.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910031904073_AddMoreFieldsReview.resx">
-      <DependentUpon>201910031904073_AddMoreFieldsReview.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910040905468_LecturerReviewFields.resx">
-      <DependentUpon>201910040905468_LecturerReviewFields.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910041613380_UniWebsites.resx">
-      <DependentUpon>201910041613380_UniWebsites.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201910291729194_Auth.resx">
+      <DependentUpon>201910291729194_Auth.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
