--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -324,6 +324,7 @@
     <Content Include="LICENSE" />
     <Content Include="README.md" />
     <Content Include="Migrations\Data\User.csv" />
+    <Content Include="Auth.config" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
