--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -286,6 +286,9 @@
     <Content Include="Assets\js\lib\bootstrap.js" />
     <Content Include="Assets\js\lib\bootstrap.min.js" />
     <Content Include=".gitignore" />
+    <Content Include=".babelrc" />
+    <Content Include="Assets\js\react\app.js" />
+    <Content Include="webpack.config.js" />
     <None Include="Assets\js\lib\jquery-3.3.1.intellisense.js" />
     <Content Include="Assets\js\lib\jquery-3.3.1.js" />
     <Content Include="Assets\js\lib\jquery-3.3.1.min.js" />
@@ -365,6 +368,7 @@
     <Folder Include="Assets\images\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="package.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
