--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "webpack-notifier": "^1.8.0"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "react": "^16.11.0",
