--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Http\Response\CustomResponse.cs" />
     <Compile Include="Migrations\201910291729194_Auth.cs" />
     <Compile Include="Migrations\201910291729194_Auth.Designer.cs">
       <DependentUpon>201910291729194_Auth.cs</DependentUpon>
@@ -292,6 +293,7 @@
     <Content Include="Assets\js\react\comparison.js" />
     <Content Include="Assets\js\react\components\InputDropdown.js" />
     <Content Include="Assets\js\react\containers\Comparison.js" />
+    <Content Include="Assets\js\react\types.js" />
     <Content Include="webpack.config.js" />
     <None Include="Assets\js\lib\jquery-3.3.1.intellisense.js" />
     <Content Include="Assets\js\lib\jquery-3.3.1.js" />
