--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -230,9 +230,9 @@
     <Compile Include="Controllers\Review\StudyProgramReviewController.cs" />
     <Compile Include="Controllers\StudyProgram\IStudyProgramController.cs" />
     <Compile Include="Controllers\StudyProgram\StudyProgramController.cs" />
-    <Compile Include="Controllers\Comparison\IUniversityComparisonController.cs" />
+    <Compile Include="Controllers\Comparison\IComparisonController.cs" />
     <Compile Include="Controllers\University\IUniversityController.cs" />
-    <Compile Include="Controllers\Comparison\UniversityComparisonController.cs" />
+    <Compile Include="Controllers\Comparison\ComparisonController.cs" />
     <Compile Include="Controllers\University\UniversityController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
