Setup statsProvider with routes from config file.

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -292,8 +292,9 @@
     <Content Include=".babelrc" />
     <Content Include="Assets\js\react\comparison.js" />
     <Content Include="Assets\js\react\components\InputDropdown.js" />
+    <Content Include="Assets\js\react\config\routes.js" />
     <Content Include="Assets\js\react\containers\Comparison.js" />
-    <Content Include="Assets\js\react\types.js" />
+    <Content Include="Assets\js\react\config\types.js" />
     <Content Include="webpack.config.js" />
     <None Include="Assets\js\lib\jquery-3.3.1.intellisense.js" />
     <Content Include="Assets\js\lib\jquery-3.3.1.js" />
