--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -25,7 +25,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44392</IISExpressSSLPort>
+    <IISExpressSSLPort>44308</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -244,11 +244,17 @@
     <Compile Include="Migrations\201910291850579_IntToString.Designer.cs">
       <DependentUpon>201910291850579_IntToString.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911022321014_Dormitory_Address.cs" />
+    <Compile Include="Migrations\201911022321014_Dormitory_Address.Designer.cs">
+      <DependentUpon>201911022321014_Dormitory_Address.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\DatabaseContext.cs" />
     <Compile Include="Models\DB.cs" />
+    <Compile Include="Models\Dormitory.cs" />
     <Compile Include="Models\Faculty.cs" />
     <Compile Include="Models\Lecturer.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -365,6 +371,8 @@
     <Folder Include="Assets\images\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Migrations\Data\Address.csv" />
+    <Content Include="Migrations\Data\Dormitory.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -385,6 +393,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910291850579_IntToString.resx">
       <DependentUpon>201910291850579_IntToString.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911022321014_Dormitory_Address.resx">
+      <DependentUpon>201911022321014_Dormitory_Address.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
