Add new js files to project.

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -282,10 +282,17 @@
     <Content Include=".gitignore" />
     <Content Include=".babelrc" />
     <Content Include="Assets\js\react\comparison.js" />
+    <Content Include="Assets\js\react\components\CourseStats.js" />
+    <Content Include="Assets\js\react\components\FacultyStats.js" />
     <Content Include="Assets\js\react\components\InputDropdown.js" />
+    <Content Include="Assets\js\react\components\LecturerStats.js" />
+    <Content Include="Assets\js\react\components\StatsContainer.js" />
+    <Content Include="Assets\js\react\components\StudyProgramStats.js" />
+    <Content Include="Assets\js\react\components\UniversityStats.js" />
     <Content Include="Assets\js\react\config\routes.js" />
     <Content Include="Assets\js\react\containers\Comparison.js" />
     <Content Include="Assets\js\react\config\types.js" />
+    <Content Include="Assets\js\react\service\statsProvider.js" />
     <Content Include="webpack.config.js" />
     <None Include="Assets\js\lib\jquery-3.3.1.intellisense.js" />
     <Content Include="Assets\js\lib\jquery-3.3.1.js" />
